# live_chat_rust_react

client/: package-lock.json  package.json  tailwind.config.js
client/app/: page.tsx
server/: Cargo.toml
server/src/: main.rs
