[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version ="1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tower = "0.5.2"
tower-http = { version = "0.5.0", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
http = "1.3.1"

